# switch-pilot-core

./: .gitignore  README.md  pyproject.toml
switch_pilot_core/: camera.py
switch_pilot_core/command/: __init__.py  base.py  loader.py  runner.py
switch_pilot_core/command/api/: __init__.py  command.py  config.py  extensions.py  image.py  timer.py  video.py
switch_pilot_core/config/: config.py
switch_pilot_core/controller/: __init__.py  button.py  controller.py  hat.py  state.py  state_serializer.py  stick.py
switch_pilot_core/image/: __init__.py  image.py
switch_pilot_core/path/: path.py
